# cfn-pyplates

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  LICENSE  Makefile  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt
cfn_pyplates/: __init__.py  base.py  cli.py  core.py  exceptions.py  functions.py  options.py  tests.py  utils.py
cfn_pyplates/tests/: __init__.py  test_utils.py  tests_main.py
docs/: Makefile  requirements.txt
docs/source/: advanced.rst  apiref.rst  conf.py  developing.rst  index.rst  intro.rst  pyplates.rst  why_yaml.rst
docs/source/examples/: README
docs/source/examples/advanced/: altered_template.py  base_template.py  callable_generate.py  inheriting_template.py  project_template.py  refactored_template.py
docs/source/examples/metadata/: ec2_instance.json  ec2_instance.py  s3.json
docs/source/examples/options/: development.json  development.rst  production.json  production.rst  template.py  template.rst  testing.json  testing.rst
docs/source/examples/options/mappings/: development.yaml  production.yaml  testing.yaml
docs/source/examples/ref/: out.json  template.py
docs/source/examples/resource_attributes/: ec2_instance.json  ec2_instance.py  ec2_instance_attribs.json  ec2_instance_attribs.py  ec2_instance_attribs.rst  s3.py  s3.rst
docs/source/examples/simple/: out.json  template.py
docs/source/examples/useful/: out.json  template.py
requirements/: requirements.txt  test_requirements.txt
tests/: test_cli.py  test_core.py  test_functions.py  test_version.py
version/: __init__.py
