[metadata]
name = cfn-pyplates
author = Sean Myers
author-email = sean.dst@gmail.com
summary = Amazon Web Services CloudFormation template generator
url = "https://github.com/seandst/cfn-pyplates"
description-file = README.rst
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords =
    setup
    distutils

[files]
packages =
    cfn_pyplates

[entry_points]
console_scripts =
    cfn_py_generate = cfn_pyplates.cli:generate

